AFS_Dev/src/objects/Opportunity_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Schedules</relationshipLabel>
        <relationshipName>Opportunity_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>Date__c</columns>
        <columns>Revenue__c</columns>
        <columns>Custom_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Opportunity Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>